fixed the collection page add fetch data random in best seller product slider and ui bugs fixed

--- a/blog.html
+++ b/blog.html
@@ -58,108 +58,107 @@
     <!-- BEGIN HEADER -->
     <header class="header">
       <div class="header__main">
-          <div class="header__cols">
-              <div class="header__left">
-                  <div class="header__col">
-                      <button class="mob-button js-mob-open">
-                          <span class="mob-button__icon"></span>
-                      </button>
-                  </div>
-                  <div class="header__col">
-                      <a class="mob__logo logo" href="#">
-                          <img class="logo__image" src="https://via.placeholder.com/82x17" alt="" />
-                      </a>
-                  </div>
-              </div>
-              <div class="header__center">
-                  <div class="header__cols">
-                      <div class="header__col header__col_hide-mob">
-                          <button class="hide-mob__close close-button js-mob-close"></button>
-                          <nav class="header-nav">
-                              <ul class="header-nav__list">
-                                  <li class="header-nav__item js-nav-item">
-                                      <a class="header-nav__link header-nav__link_arrow js-nav-button"
-                                          href="shop.html">Shop</a>
-                                      <div class="hide-nav js-nav-hide">
-                                          <div class="clearfix">
-                                              <ul class="hide-nav__list hide-nav__list_wrap">
-                                                  <li class="hide-nav__item">
-                                                      <label>Shop Pages</label>
-                                                  </li>
-                                                  <li class="hide-nav__item">
-                                                      <a class="hide-nav__link" href="#">Shop Page V1</a>
-                                                  </li>
-                                                  <li class="hide-nav__item">
-                                                      <a class="hide-nav__link" href="#">Shop Page V2</a>
-                                                  </li>
-                                                  <li class="hide-nav__item">
-                                                      <a class="hide-nav__link" href="#">Shop Page V3</a>
-                                                  </li>
-                                                  <li class="hide-nav__item">
-                                                      <a class="hide-nav__link" href="#">Shop Page V4</a>
-                                                  </li>
-                                              </ul>
-                                              <ul class="hide-nav__list hide-nav__list_wrap">
-                                                  <li class="hide-nav__item">
-                                                      <label>Procut Pages</label>
-                                                  </li>
-                                                  <li class="hide-nav__item">
-                                                      <a class="hide-nav__link" href="cart.html">Single Product
-                                                          V1</a>
-                                                  </li>
-                                                  <li class="hide-nav__item">
-                                                      <a class="hide-nav__link" href="#">Single Product V2</a>
-                                                  </li>
-                                                  <li class="hide-nav__item">
-                                                      <a class="hide-nav__link" href="#">Single Product V3</a>
-                                                  </li>
-                                                  <li class="hide-nav__item">
-                                                      <a class="hide-nav__link" href="#">Single Product V4</a>
-                                                  </li>
-                                              </ul>
-                                              <div class="hide-nav__list hide-nav__image__wrap text-right">
-                                                  <a href="" class="hide-nav-collecton__image">
-                                                      <img src="assets/img/collection/collection.jpeg" alt="" />
-                                                  </a>
-                                              </div>
-                                          </div>
-                                      </div>
-                                  </li>
-                                  <li class="header-nav__item active">
-                                      <a class="header-nav__link" href="our_story.html">Our Story</a>
-                                  </li>
-                                  <li class="header-nav__item logo_nav">
-                                      <div class="header__col text-center">
-                                          <a class="logo" href="index.html">
-                                              <h3>Logo</h3>
-                                          </a>
-                                      </div>
-                                  </li>
-                                  <li class="header-nav__item">
-                                      <a class="header-nav__link" href="about.html">About us</a>
-                                  </li>
-                                  <li class="header-nav__item">
-                                      <a class="header-nav__link" href="contacts.html">Contact us</a>
-                                  </li>
-                              </ul>
-                          </nav>
-                      </div>
-                  </div>
-              </div>
-              <div class="header__right">
-                  <ul class="user-nav">
-                      <li class="user-nav__item">
-                          <a class="user-nav__link" href="wishlist.html">
-                              <span class="user-nav__icon user-nav__icon_3"></span>
-                              <span class="user-nav__text" id="wishlistCount">0</span>
-                          </a>
-                      </li>
-                  </ul>
-              </div>
+        <div class="header__cols">
+          <div class="header__left">
+            <div class="header__col">
+              <button class="mob-button js-mob-open">
+                <span class="mob-button__icon"></span>
+              </button>
+            </div>
+            <div class="header__col">
+              <a class="mob__logo logo" href="#">
+                <img class="logo__image" src="https://via.placeholder.com/82x17" alt="" />
+              </a>
+            </div>
           </div>
+          <div class="header__center">
+            <div class="header__cols">
+              <div class="header__col header__col_hide-mob">
+                <button class="hide-mob__close close-button js-mob-close"></button>
+                <nav class="header-nav">
+                  <ul class="header-nav__list">
+                    <li class="header-nav__item js-nav-item">
+                      <a class="header-nav__link header-nav__link_arrow js-nav-button" href="shop.html">Shop</a>
+                      <div class="hide-nav js-nav-hide">
+                        <div class="clearfix">
+                          <ul class="hide-nav__list hide-nav__list_wrap">
+                            <li class="hide-nav__item">
+                              <label>Shop Pages</label>
+                            </li>
+                            <li class="hide-nav__item">
+                              <a class="hide-nav__link" href="#">Shop Page V1</a>
+                            </li>
+                            <li class="hide-nav__item">
+                              <a class="hide-nav__link" href="#">Shop Page V2</a>
+                            </li>
+                            <li class="hide-nav__item">
+                              <a class="hide-nav__link" href="#">Shop Page V3</a>
+                            </li>
+                            <li class="hide-nav__item">
+                              <a class="hide-nav__link" href="#">Shop Page V4</a>
+                            </li>
+                          </ul>
+                          <ul class="hide-nav__list hide-nav__list_wrap">
+                            <li class="hide-nav__item">
+                              <label>Procut Pages</label>
+                            </li>
+                            <li class="hide-nav__item">
+                              <a class="hide-nav__link" href="cart.html">Single Product
+                                V1</a>
+                            </li>
+                            <li class="hide-nav__item">
+                              <a class="hide-nav__link" href="#">Single Product V2</a>
+                            </li>
+                            <li class="hide-nav__item">
+                              <a class="hide-nav__link" href="#">Single Product V3</a>
+                            </li>
+                            <li class="hide-nav__item">
+                              <a class="hide-nav__link" href="#">Single Product V4</a>
+                            </li>
+                          </ul>
+                          <div class="hide-nav__list hide-nav__image__wrap text-right">
+                            <a href="" class="hide-nav-collecton__image">
+                              <img src="assets/img/collection/collection.jpeg" alt="" />
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="header-nav__item">
+                      <a class="header-nav__link" href="our_story.html">Our Story</a>
+                    </li>
+                    <li class="header-nav__item logo_nav">
+                      <div class="header__col text-center">
+                        <a class="logo" href="index.html">
+                          <h3>Logo</h3>
+                        </a>
+                      </div>
+                    </li>
+                    <li class="header-nav__item">
+                      <a class="header-nav__link" href="about.html">About us</a>
+                    </li>
+                    <li class="header-nav__item">
+                      <a class="header-nav__link" href="contacts.html">Contact us</a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+          <div class="header__right">
+            <ul class="user-nav">
+              <li class="user-nav__item">
+                <a class="user-nav__link" href="wishlist.html">
+                  <span class="user-nav__icon user-nav__icon_3"></span>
+                  <span class="user-nav__text" id="wishlistCount">0</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-  </header>
-  <!-- HEADER END -->
+    </header>
+    <!-- HEADER END -->
 
     <!-- BEGIN MAIN -->
     <main class="main">
