--- a/my_profile.html
+++ b/my_profile.html
@@ -124,7 +124,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="header-nav__item active">
+                    <li class="header-nav__item">
                       <a class="header-nav__link" href="our_story.html">Our Story</a>
                     </li>
                     <li class="header-nav__item logo_nav">
@@ -1011,6 +1011,7 @@
   <script src="assets/js/libs/jquery-3.5.1.min.js"></script>
   <script src="assets/js/libs/jquery-migrate-1.4.1.min.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/accordion.js"></script>
 </body>
 
 </html>
