--- a/registration.html
+++ b/registration.html
@@ -124,7 +124,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="header-nav__item active">
+                    <li class="header-nav__item">
                       <a class="header-nav__link" href="our_story.html">Our Story</a>
                     </li>
                     <li class="header-nav__item logo_nav">
@@ -261,7 +261,7 @@
             </form>
             <img class="login-page__vector"
               src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-              data-lazy="assets/img/svg/vector-login.svg" alt="" />
+              data-lazy="assets/img/svg/vector-inner-top.png" alt="" />
           </div>
         </div>
       </div>
