--- a/contacts.html
+++ b/contacts.html
@@ -261,7 +261,7 @@
           </div>
           <img class="contacts-page__vector"
             src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-            data-lazy="assets/img/svg/vector-contacts.svg" alt="" />
+            data-lazy="assets/img/svg/vector-inner-top.png" alt="" />
         </div>
         <div class="contacts-page__map">
           <div class="map" id="map"></div>
