--- a/wishlist.html
+++ b/wishlist.html
@@ -124,7 +124,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="header-nav__item active">
+                    <li class="header-nav__item">
                       <a class="header-nav__link" href="our_story.html">Our Story</a>
                     </li>
                     <li class="header-nav__item logo_nav">
